<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bno080_micro_ros2</name>
  <version>0.0.0</version>
  <description>M5 Stack Atom Matrix ROS2 Driver</description>
  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
